--- a/ex04/exercise.tex
+++ b/ex04/exercise.tex
@@ -27,7 +27,7 @@
 \begin{enumerate}
 
 \item Construct a MLP network which is able to separate the two
-  classes illustrated in Figure \ref{61}. Use two neurons both in the input
+  classes illustrated in Figure \ref{fig:mlp_classify}. Use two neurons both in the input
   and output layer and an arbitrary number of hidden layer
   neurons. The output of the network should be vector $\left[ 1,
     0\right]^T$ if the input vector belongs to class $\mathcal{C}_1$ and  $\left[ 0,
@@ -45,8 +45,8 @@
   \begin{figure}[hbp]
     \centering
     \includegraphics[width=7cm]{mlp_classification}
-    \label{61}
     \caption{Classes $\mathcal{C}_1$ and $\mathcal{C}_2$.}
+    \label{fig:mlp_classify}
   \end{figure}
 
   \begin{solution}
