--- a/ex08/exercise.tex
+++ b/ex08/exercise.tex
@@ -223,7 +223,7 @@
     the samples have moved to points which cannot be linearly separated.
     Then the separation can be done using slack-variables which allow
     some points to be on the wrong side of the separating hyperplane.
-    Notice that the number of support vectors does not change.
+    %Notice that the number of support vectors does not change.
 
     % "The number of support vectors does not change." ???
     %
@@ -315,16 +315,21 @@
 
   \begin{solution}
 
-    Yes.  For each class, construct a SVM which discriminates
-    between that class and all the rest.  This way there will be as many
-    SVMs as there are classes.  Alternatively, it is possible to use a
-    binary classification as the following example shows: for eight
-    classes, train one SVM to separate between classes (1,2,3,4) and
-    (5,6,7,8), one SVM to separate between (1,2,5,6) and (3,4,7,8) and
-    one SVM to separate (1,3,5,7) and (2,4,6,8).  This way there will be
-    only about $\log_2 N$ classifiers for $N$ classes, but the task for
-    each SVM will be more difficult and consequently the classification
-    result can be worse.
+    Yes, there are several ways of doing this.  1) For each class, construct a
+    SVM which discriminates between that class and all the rest.  This way there
+    will be as many SVMs as there are classes.  If multiple SVMs classify it
+    into different classes, compare the function values and choose the class
+    with the highest value.  2) Alternatively, it is possible to construct a SVM
+    for each pair of classes and learn to separate those two classes.  The final
+    classification is the class that has most votes.
+    
+    3) It is also possible to use a binary classification as the following
+    example shows: for eight classes, train one SVM to separate between classes
+    (1,2,3,4) and (5,6,7,8), one SVM to separate between (1,2,5,6) and (3,4,7,8)
+    and one SVM to separate (1,3,5,7) and (2,4,6,8).  This way there will be
+    only about $\log_2 N$ classifiers for $N$ classes, but the task for each SVM
+    will be more difficult and consequently the classification result can be
+    worse.
 
   \end{solution}
 
